--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -1,3 +1,4 @@
+@import "node_modules/modularscale-sass/stylesheets/modular-scale";
 @import "fonts";
 @import "bourbon/bourbon";
 @import "base/base";
