--- a/web/static/css/_scoreboard.scss
+++ b/web/static/css/_scoreboard.scss
@@ -4,6 +4,10 @@
   @include media($mobile) {
     @include span-columns(12);
   }
+  &-division-img {
+    width: ms(9);
+    margin-right: ms(-3);
+  }
   &-snake {
     display: flex;
     align-items: flex-end;
@@ -25,6 +29,8 @@
     padding-right: ms(-3);
     padding-top: ms(-3);
     padding-bottom: ms(-3);
+    display: flex;
+    align-items: center;
   }
   &-flag-container {
     display: flex;
