--- a/web/templates/board_viewer/_scoreboard.html.eex
+++ b/web/templates/board_viewer/_scoreboard.html.eex
@@ -61,14 +61,18 @@
   <% end %>
 
   <%= for snake <- @dead_snakes do %>
-    <div class="scoreboard-dead-snake">
-      <div class="scoreboard-snake-name"><%= snake.name %></div>
-      <div class="scoreboard-healthbar">
-        <div class="scoreboard-taunt"><%= snake.taunt %></div>
-        <svg class="scoreboard-healthpoints"
-             preserveAspectRatio="none"
-             viewBox="0 0 100 100">
-          <%= content_tag(:rect,
+    <div class="scoreboard-snake scoreboard-dead-snake">
+      <div class="scoreboard-avatar">
+        <image src="<%= head_image_url snake %>"></image>
+      </div>
+      <div>
+        <div class="scoreboard-snake-name"><%= snake.name %></div>
+        <div class="scoreboard-healthbar">
+          <div class="scoreboard-taunt"><%= snake.taunt %></div>
+          <svg class="scoreboard-healthpoints"
+               preserveAspectRatio="none"
+               viewBox="0 0 100 100">
+            <%= content_tag(:rect,
               "",
               fill: snake.color,
               x: 0,
@@ -77,14 +81,15 @@
               width: 100,
               class: "scoreboard-healthpoints-shadow") %>
 
-          <%= content_tag(:rect,
+            <%= content_tag(:rect,
               "",
               fill: snake.color,
               x: 0,
               y: 0,
               height: 100,
               width: snake.health_points) %>
-        </svg>
+          </svg>
+        </div>
       </div>
     </div>
   <% end %>
