Fix deprecation notice
Move sass variable decleration into variable file.

--- a/web/static/css/base/_variables.scss
+++ b/web/static/css/base/_variables.scss
@@ -75,3 +75,5 @@ $dead-snake-opacity: 0.3;
 
 // Breakpoints
 $mobile: new-breakpoint(max-width 480px);
+$medium-screen: 30em !default;
+$large-screen: 50em !default;
