Make the modal readable

--- a/web/static/css/base/_variables.scss
+++ b/web/static/css/base/_variables.scss
@@ -33,6 +33,7 @@ $orange: #f06a53;
 $base-font-color: $white;
 $action-color: $orange;
 $scoreboard-font-color: $white;
+$modal-font-color: $dark-gray;
 
 // Border
 $base-border-color: $light-gray;
