--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -2,6 +2,7 @@
 @import "fonts";
 @import "bourbon/bourbon";
 @import "base/base";
+@import "breakpoints";
 @import "neat/neat";
 @import "empties/modal";
 @import "layout";
