--- a/web/templates/board_viewer/_scoreboard.html.eex
+++ b/web/templates/board_viewer/_scoreboard.html.eex
@@ -2,8 +2,8 @@
   <%= img_tag "/images/bs-logo-light.svg", class: "scoreboard-logo" %>
   <div class="scoreboard-flag-container">
     <div class="scoreboard-flag">
-      <image class="scoreboard-division-img"
-             src="/images/division-advanced.svg"></image>
+      <img class="scoreboard-division-img"
+             src="/images/division-advanced.svg"></img>
       <div>
         <div class="scoreboard-game-name">
           <span><%= @state.game_form.id %></span>
@@ -29,7 +29,7 @@
   <%= for snake <- @snakes do %>
     <div class="scoreboard-snake">
       <div class="scoreboard-avatar">
-        <image src="<%= head_image_url snake %>"></image>
+        <img src="<%= head_image_url snake %>"></img>
       </div>
       <div>
         <div class="scoreboard-snake-name"><%= snake.name %></div>
@@ -63,7 +63,7 @@
   <%= for snake <- @dead_snakes do %>
     <div class="scoreboard-snake scoreboard-dead-snake">
       <div class="scoreboard-avatar">
-        <image src="<%= head_image_url snake %>"></image>
+        <img src="<%= head_image_url snake %>"></img>
       </div>
       <div>
         <div class="scoreboard-snake-name"><%= snake.name %></div>
