--- a/web/static/css/base/_variables.scss
+++ b/web/static/css/base/_variables.scss
@@ -38,6 +38,7 @@ $modal-font-color: $dark-gray;
 // Border
 $base-border-color: $light-gray;
 $base-border: 1px solid $base-border-color;
+$avatar-border-width: 6px;
 
 // Background Colors
 $base-background-color: shade($dark-purple, 0);
