--- a/web/static/css/_scoreboard.scss
+++ b/web/static/css/_scoreboard.scss
@@ -1,9 +1,10 @@
 .scoreboard {
-  @include span-columns(4);
+  display: flex;
+  flex-direction: column;
 
-  @include media($mobile) {
-    @include span-columns(12);
-  }
+  width: ms(21);
+  padding-right: ms(12);
+
   &-division-img {
     width: ms(9);
     margin-right: ms(-3);
