--- a/web/static/css/_layout.scss
+++ b/web/static/css/_layout.scss
@@ -1,11 +1,15 @@
 html,
 body,
 main {
-    background-color: $base-background-color;
+  background-color: $base-background-color;
+
+  @include media($tablet) {
+    font-size: ms(-1);
+  }
 }
 
 .view-btn {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
 }
