Don't draw tail if the snake is stacked
this way only the head will be drawn on the first turn

--- a/web/templates/snake/snake.html.eex
+++ b/web/templates/snake/snake.html.eex
@@ -2,14 +2,6 @@
 <% [head|hs] = Enum.take(coords, 2) %>
 <% [tail|ts] = Enum.take(coords, -2) |> Enum.reverse %>
 <% color = @snake.color %>
-
-<g transform="translate(0.5 0.5)">
-  <path class="obj-snake"
-        stroke="<%= color %>"
-        d="<%= snake_path(@snake) %>">
-  </path>
-</g>
-
 <use
     class="obj-snake"
     style="fill: <%= color %>"
@@ -18,12 +10,19 @@
     xlink:href="#snake-head"
     y="<%= head.y %>"
 ></use>
-
-<use
-    class="obj-snake"
-    style="fill: <%= color %>"
-    transform="<%= transform_segment(tail, ts) %>"
-    x="<%= tail.x %>"
-    xlink:href="#snake-tail"
-    y="<%= tail.y %>"
-></use>
+<%= if length(coords) > 1 do %>
+  <g transform="translate(0.5 0.5)">
+    <path class="obj-snake"
+          stroke="<%= color %>"
+          d="<%= snake_path(@snake) %>">
+    </path>
+  </g>
+  <use
+      class="obj-snake"
+      style="fill: <%= color %>"
+      transform="<%= transform_segment(tail, ts) %>"
+      x="<%= tail.x %>"
+      xlink:href="#snake-tail"
+      y="<%= tail.y %>"
+  ></use>
+<% end %>
