--- a/web/templates/snake/score_dead.html.eex
+++ b/web/templates/snake/score_dead.html.eex
@@ -7,7 +7,7 @@
 <div class="scoreboard-snake">
   <div style="border-color: <%= color %>;background-image:url(<%= img_src %>);"
        class="scoreboard-avatar scoreboard-dead-snake"></div>
-  <div>
+  <div class="scoreboard-snake-info">
     <div class="scoreboard-name"><%= name %></div>
     <div>Died on turn <%= turn %></div>
     <%= for cause <- causes do %>
