remove unnessary assigns

--- a/web/templates/spectator/_scoreboard.html.eex
+++ b/web/templates/spectator/_scoreboard.html.eex
@@ -10,7 +10,7 @@
         </div>
         <div class="scoreboard-game-turn">
           <span>Turn</span>
-          <span><%= @turn %></span>
+          <span><%= @state.world.turn %></span>
         </div>
       </div>
     </div>
