show the winner on the scoreboard

--- a/web/static/css/_scoreboard.scss
+++ b/web/static/css/_scoreboard.scss
@@ -27,6 +27,9 @@
   &-snake-info {
     width: 100%;
   }
+  &-snake-winner {
+    color: gold;
+  }
   &-avatar {
     background-repeat: no-repeat;
     background-size: cover;
