--- a/web/templates/snake/score_live.html.eex
+++ b/web/templates/snake/score_live.html.eex
@@ -3,8 +3,9 @@
 <% name = @snake.name %>
 <% health_points = @snake.health_points %>
 <% img_src = head_image_url @snake %>
+<% css_class = if GameState.winner?(@state, @snake), do: "scoreboard-snake-winner" %>
 
-<div class="scoreboard-snake">
+<div class="scoreboard-snake <%= css_class %>">
   <div style="border-color: <%= color %>;background-image:url(<%= img_src %>);"
        class="scoreboard-avatar"></div>
   <div class="scoreboard-snake-info">
