--- a/assets/css/_game-board.scss
+++ b/assets/css/_game-board.scss
@@ -1,48 +1,17 @@
-.play-show {
-  display: flex;
-
-  @include media($mobile) {
-    flex-direction: column;
-  }
+.scoreboard {
 }
 
-.game-board-container {
-  display: flex;
-  flex: 1;
-  justify-content: flex-end;
+.gameboard {
+  width: 100vh;
+  position: relative;
 
-  @include media($mobile) {
-    justify-content: center;
+  canvas {
+    width: 100vh;
   }
-}
 
-.game-board {
-  height: 92vh;
-  width: 100%;
-
-  @include media($mobile) {
-    height: 100vw;
-    width: 100vw;
+  canvas ~ canvas {
+    left: 0;
+    position: absolute;
+    z-index: 1;
   }
-  &-tile {
-    fill: $secondary-background-color;
-  }
-  &-table-top {
-    fill: transparent;
-  }
-}
-
-.obj-food {
-  fill: $obj-food-bg-color;
-}
-
-.obj-snake-dead {
-  stroke-opacity: 0.25;
-  fill-opacity: 0.25;
-}
-
-.obj-snake {
-  fill: transparent;
-  stroke-width: $obj-snake-stroke-width;
-  stroke-linejoin: round;
 }
