Handle game app mounting with elm
big ol' shitty commit.

Makes the app managed by elm. Yet another fraken-creation of mine: the
app is launched with an embeded elm app, elm handles all IO, sockets,
dom manipulation and view updates. The Elm app creates the canvas
elements, and calls a port to some imperative typescript code which
handles all the canvas rendering.

--- a/assets/css/_game-board.scss
+++ b/assets/css/_game-board.scss
@@ -1,12 +1,19 @@
 .scoreboard {
 }
 
+.gameapp {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .gameboard {
-  width: 100vh;
+  width: 50vh;
   position: relative;
 
   canvas {
-    width: 100vh;
+    width: inherit;
   }
 
   canvas ~ canvas {
