--- a/assets/css/_game-board.scss
+++ b/assets/css/_game-board.scss
@@ -1,23 +1,60 @@
-.scoreboard {
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.snake {
+  position: relative;
+}
+
+.snakes {
+  width: 20vh
+}
+
+.col {
+  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  flex: 1;
+  display: flex;
+}
+
+.snake-label {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.snake-healthbar {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
 
 .gameapp {
   height: 100vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .gameboard {
-  width: 50vh;
+  flex: 1;
   position: relative;
 
   canvas {
-    width: inherit;
-  }
-
-  canvas ~ canvas {
-    left: 0;
+    height: 100%;
+    width: 100%;
     position: absolute;
     z-index: 1;
   }
