--- a/lib/bs_web/templates/play/show.html.eex
+++ b/lib/bs_web/templates/play/show.html.eex
@@ -1,4 +1,4 @@
-<%= for asset <- snake_assets do %>
+<%= for asset <- snake_assets() do %>
   <link
   id="<%= asset[:id] %>"
   href="<%= static_path(@conn, "/#{asset[:src]}") %>"
