Split app from main index

--- a/lib/bs_web/templates/layout/app.html.eex
+++ b/lib/bs_web/templates/layout/app.html.eex
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Dylan C. Kendal">
 
-    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script src="<%= static_path(@conn, "/js/runtime.js") %>"></script>
+    <script src="<%= static_path(@conn, "/js/vendor.js") %>"></script>
+    <script src="<%= static_path(@conn, "/js/index.js") %>"></script>
 
-    <title>Bs 2018</title>
+    <title>BattleSnake 2018</title>
   </head>
 
   <body>
