--- a/assets/src/app.css
+++ b/assets/src/app.css
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-width: 300px;
+  min-width: 400px;
 }
 
 .scoreboard-snakes {
@@ -68,3 +68,8 @@
 .division-logo {
   margin: 0 2lh;
 }
+
+.spinner {
+  stroke: var(--font-accent-color);
+}
+
