Don't include app.js in the layout

--- a/lib/bs_web/templates/game/show.html.eex
+++ b/lib/bs_web/templates/game/show.html.eex
@@ -1,3 +1,5 @@
+<script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+
 <%= for asset <- snake_assets() do %>
   <link
   id="<%= asset[:id] %>"
