--- a/lib/bs_web/templates/test/index.html.eex
+++ b/lib/bs_web/templates/test/index.html.eex
@@ -1,1 +1,11 @@
+<%= for asset <- snake_assets() do %>
+  <link
+  id="<%= asset[:id] %>"
+  href="<%= static_path(@conn, "/#{asset[:src]}") %>"
+  charset="utf-8"
+  rel="prefetch"
+  type="image/svg+xml"
+  ></link>
+<% end %>
+
 <script src="<%= static_path(@conn, "/js/test.js") %>"></script>
