--- a/lib/bs_web/templates/game/show.html.eex
+++ b/lib/bs_web/templates/game/show.html.eex
@@ -1,4 +1,4 @@
-<script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+<script src="<%= static_path(@conn, "/js/game.js") %>"></script>
 
 <%= for asset <- snake_assets() do %>
   <link
