--- a/assets/src/index.css
+++ b/assets/src/index.css
@@ -14,3 +14,10 @@ html, body {
 a {
   color: var(--link-color);
 }
+
+.gameboard-canvas {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+}
