add snake_start_length to schema and changeset validations * default 3 * validates greater than or equal to 1

--- a/lib/bs_web/templates/game/_form.html.eex
+++ b/lib/bs_web/templates/game/_form.html.eex
@@ -31,6 +31,11 @@
   </div>
 
   <div>
+    <%= label @form, :snake_start_length %>
+    <%= number_input @form, :snake_start_length, required: true %>
+  </div>
+
+  <div>
     <%= label @form, :game_mode %>
     <%= select @form, :game_mode, BsRepo.GameForm.game_modes(), required: true %>
   </div>
