--- a/lib/bs_web/templates/game/show.html.eex
+++ b/lib/bs_web/templates/game/show.html.eex
@@ -1,17 +1,2 @@
 <script src="<%= static_path(@conn, "/js/game.js") %>"></script>
-
-<%= for asset <- snake_assets() do %>
-  <link
-  id="<%= asset[:id] %>"
-  href="<%= static_path(@conn, "/#{asset[:src]}") %>"
-  charset="utf-8"
-  rel="prefetch"
-  type="image/svg+xml"
-  ></link>
-<% end %>
-
-<script id="bs-config" type="application/json">
-  <%= raw bs_js_object(assigns) %>
-</script>
-
-<%= content_tag :Game, "", [gameid: @game.id] %>
+<div id="gameapp" data-gameid=<%= @game.id %>></div>
